add token prune dry run
